;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                    Mark Shinwell, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2020 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name raw_spacetime_lib)
 (wrapped false)
 (modes byte native)
 (flags (:standard -nostdlib -nolabels))
 (foreign_stubs
   (language c)
   (names spacetime_offline)
   (flags -I %{project_root}/runtime))
 (libraries stdlib))

(install
  (files
    .raw_spacetime_lib.objs/native/raw_spacetime_lib.cmx
    raw_spacetime_lib.cmxa
    raw_spacetime_lib.a
    raw_spacetime_lib.cmxs
  )
  (section lib)
  (package ocaml))
