(rule
  (targets simplify.ml)
  (deps
    rec_modules
    simplify.templ.ml
    simplify_expr.rec.ml
    simplify_named.rec.ml
    simplify_toplevel.rec.ml
    simplify_expr.rec.mli
    simplify_named.rec.mli
    simplify_toplevel.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               simplify.templ.ml
               rec_modules
               simplify.ml))
)
