(rule
  (targets flambda_type0.ml)
  (deps
    rec_modules
    flambda_type0.templ.ml
    type_grammar.rec.ml
    type_of_kind/type_of_kind_value.rec.ml
    type_of_kind/type_of_kind_value0.rec.ml
    type_of_kind/type_of_kind_naked_immediate.rec.ml
    type_of_kind/type_of_kind_naked_immediate0.rec.ml
    type_of_kind/type_of_kind_naked_float.rec.ml
    type_of_kind/type_of_kind_naked_float0.rec.ml
    type_of_kind/type_of_kind_naked_int32.rec.ml
    type_of_kind/type_of_kind_naked_int32_0.rec.ml
    type_of_kind/type_of_kind_naked_int64.rec.ml
    type_of_kind/type_of_kind_naked_int64_0.rec.ml
    type_of_kind/type_of_kind_naked_nativeint.rec.ml
    type_of_kind/type_of_kind_naked_nativeint0.rec.ml
    type_of_kind/type_of_kind_fabricated.rec.ml
    type_of_kind/type_of_kind_fabricated0.rec.ml
    resolved_type.rec.ml
    derived_structures/blocks.rec.ml
    derived_structures/closures_entry.rec.ml
    derived_structures/closures_entry_by_set_of_closures_contents.rec.ml
    derived_structures/discriminants.rec.ml
    derived_structures/function_declaration_type.rec.ml
    derived_structures/immediates.rec.ml
    derived_structures/types_by_closure_id.rec.ml
    derived_structures/types_by_var_within_closure.rec.ml
    env/meet_env.rec.ml
    env/typing_env_extension.rec.ml
    env/typing_env_level.rec.ml
    env/typing_env.rec.ml
    generic_structures/lattice_ops.rec.ml
    generic_structures/product.rec.ml
    generic_structures/row_like.rec.ml
    generic_structures/trivial_row_like.rec.ml
    type_grammar.rec.mli
    type_of_kind/type_of_kind_value.rec.mli
    type_of_kind/type_of_kind_value0.rec.mli
    type_of_kind/type_of_kind_naked_immediate.rec.mli
    type_of_kind/type_of_kind_naked_immediate0.rec.mli
    type_of_kind/type_of_kind_naked_float.rec.mli
    type_of_kind/type_of_kind_naked_float0.rec.mli
    type_of_kind/type_of_kind_naked_int32.rec.mli
    type_of_kind/type_of_kind_naked_int32_0.rec.mli
    type_of_kind/type_of_kind_naked_int64.rec.mli
    type_of_kind/type_of_kind_naked_int64_0.rec.mli
    type_of_kind/type_of_kind_naked_nativeint.rec.mli
    type_of_kind/type_of_kind_naked_nativeint0.rec.mli
    type_of_kind/type_of_kind_fabricated.rec.mli
    type_of_kind/type_of_kind_fabricated0.rec.mli
    resolved_type.rec.mli
    derived_structures/blocks.rec.mli
    derived_structures/closures_entry.rec.mli
    derived_structures/closures_entry_by_set_of_closures_contents.rec.mli
    derived_structures/discriminants.rec.mli
    derived_structures/function_declaration_type.rec.mli
    derived_structures/immediates.rec.mli
    derived_structures/types_by_closure_id.rec.mli
    derived_structures/types_by_var_within_closure.rec.mli
    env/meet_env.rec.mli
    env/typing_env_extension.rec.mli
    env/typing_env_level.rec.mli
    env/typing_env.rec.mli
    generic_structures/lattice_ops.rec.mli
    generic_structures/product.rec.mli
    generic_structures/row_like.rec.mli
    generic_structures/trivial_row_like.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               flambda_type0.templ.ml
               rec_modules
               flambda_type0.ml))
)
