(rule
  (targets flambda_type0.ml)
  (deps
    rec_modules
    flambda_type0.templ.ml
    flambda_types.rec.ml
    flambda_type0_core.rec.ml
    type_erase_aliases.rec.ml
    type_free_names.rec.ml
    type_printers.rec.ml
    derived_structures/blocks.rec.ml
    derived_structures/closure_elements.rec.ml
    derived_structures/closures_entry.rec.ml
    derived_structures/closures_entry_by_set_of_closures_contents.rec.ml
    derived_structures/discriminants.rec.ml
    derived_structures/immediates.rec.ml
    derived_structures/types_by_closure_id.rec.ml
    derived_structures/types_by_var_within_closure.rec.ml
    env/typing_env_extension.rec.ml
    env/typing_env_level.rec.ml
    env/typing_env.rec.ml
    equality/type_equality_env.rec.ml
    meet_and_join/api_meet_and_join.rec.ml
    meet_and_join/lattice_ops.rec.ml
    meet_and_join/kind_independent_meet_or_join.rec.ml
    meet_and_join/meet_and_join_fabricated.rec.ml
    meet_and_join/meet_and_join_naked_float.rec.ml
    meet_and_join/meet_and_join_naked_immediate.rec.ml
    meet_and_join/meet_and_join_naked_int32.rec.ml
    meet_and_join/meet_and_join_naked_int64.rec.ml
    meet_and_join/meet_and_join_naked_nativeint.rec.ml
    meet_and_join/meet_and_join_value.rec.ml
    meet_and_join/meet_env.rec.ml
    meet_and_join/meet_or_join.rec.ml
    structures/product.rec.ml
    structures/row_like.rec.ml
    structures/trivial_row_like.rec.ml
    flambda_types.rec.mli
    flambda_type0_core.rec.mli
    type_erase_aliases.rec.mli
    type_free_names.rec.mli
    type_printers.rec.mli
    derived_structures/blocks.rec.mli
    derived_structures/closure_elements.rec.mli
    derived_structures/closures_entry.rec.mli
    derived_structures/closures_entry_by_set_of_closures_contents.rec.mli
    derived_structures/discriminants.rec.mli
    derived_structures/immediates.rec.mli
    derived_structures/types_by_closure_id.rec.mli
    derived_structures/types_by_var_within_closure.rec.mli
    env/typing_env_extension.rec.mli
    env/typing_env_level.rec.mli
    env/typing_env.rec.mli
    equality/type_equality_env.rec.mli
    meet_and_join/api_meet_and_join.rec.mli
    meet_and_join/lattice_ops.rec.mli
    meet_and_join/kind_independent_meet_or_join.rec.mli
    meet_and_join/meet_and_join_fabricated.rec.mli
    meet_and_join/meet_and_join_naked_float.rec.mli
    meet_and_join/meet_and_join_naked_immediate.rec.mli
    meet_and_join/meet_and_join_naked_int32.rec.mli
    meet_and_join/meet_and_join_naked_int64.rec.mli
    meet_and_join/meet_and_join_naked_nativeint.rec.mli
    meet_and_join/meet_and_join_value.rec.mli
    meet_and_join/meet_env.rec.mli
    meet_and_join/meet_or_join.rec.mli
    structures/product.rec.mli
    structures/row_like.rec.mli
    structures/trivial_row_like.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               flambda_type0.templ.ml
               rec_modules
               flambda_type0.ml))
)
