(rule
  (targets flambda_type0.ml)
  (deps
    rec_modules
    flambda_type0.templ.ml
    type_grammar.rec.ml
    type_of_kind_value.rec.ml
    type_of_kind_value0.rec.ml
    type_of_kind_fabricated.rec.ml
    type_of_kind_fabricated0.rec.ml
    derived_structures/blocks.rec.ml
    derived_structures/closures_entry.rec.ml
    derived_structures/closures_entry_by_set_of_closures_contents.rec.ml
    derived_structures/discriminants.rec.ml
    derived_structures/immediates.rec.ml
    derived_structures/types_by_closure_id.rec.ml
    derived_structures/types_by_var_within_closure.rec.ml
    env/typing_env_extension.rec.ml
    env/typing_env_level.rec.ml
    env/typing_env.rec.ml
    equality/type_equality_env.rec.ml
    meet_and_join/lattice_ops.rec.ml
    meet_and_join/meet_env.rec.ml
    structures/product.rec.ml
    structures/row_like.rec.ml
    structures/trivial_row_like.rec.ml
    type_grammar.rec.mli
    type_of_kind_value.rec.mli
    type_of_kind_value0.rec.mli
    type_of_kind_fabricated.rec.mli
    type_of_kind_fabricated0.rec.mli
    derived_structures/blocks.rec.mli
    derived_structures/closures_entry.rec.mli
    derived_structures/closures_entry_by_set_of_closures_contents.rec.mli
    derived_structures/discriminants.rec.mli
    derived_structures/immediates.rec.mli
    derived_structures/types_by_closure_id.rec.mli
    derived_structures/types_by_var_within_closure.rec.mli
    env/typing_env_extension.rec.mli
    env/typing_env_level.rec.mli
    env/typing_env.rec.mli
    equality/type_equality_env.rec.mli
    meet_and_join/lattice_ops.rec.mli
    meet_and_join/meet_env.rec.mli
    structures/product.rec.mli
    structures/row_like.rec.mli
    structures/trivial_row_like.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               flambda_type0.templ.ml
               rec_modules
               flambda_type0.ml))
)
